--- a/new-vector-tests.user.css
+++ b/new-vector-tests.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 tests
 @namespace   StylishThemes
-@version     1.0.25
+@version     1.0.26
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-tests.user.css
 @license     CC-BY-SA-4.0
@@ -141,15 +141,8 @@ html {
   text-decoration: none;  
 }
 
-#ca-view > a {
-  -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-accessibility&image=eye&format=original)  no-repeat 0 0/15px;
-  mask: url(/w/load.php?modules=oojs-ui.styles.icons-accessibility&image=eye&format=original) no-repeat 0 0/15px;
-  background-color: black;
-  padding: 10px;
-  width: 10px;
-  font-size: 1px;
-  color: white;
-  text-decoration: none;
+#ca-view {
+  display: none;
 }
 
 #ca-view-foreign > a {
